syntax = "proto3";
package pixiu.api.v1;

import "address.proto";
import "google/protobuf/struct.proto";

// ApiConfigSource
message ApiConfigSource {
	string apitype_str = 1 ;
	repeated string cluster_name = 2;
}



// ConfigSource
message ConfigSource {
	string path = 1;
	pixiu.api.v1.ApiConfigSource api_config_source = 2;
}

// EdsClusterConfig
message EdsClusterConfig {
	pixiu.api.v1.ConfigSource eds_config = 1;
	string service_name = 2;
}

// Cluster a single upstream cluster
message Cluster {
	string name = 1;
	string type_str = 2;
	int32 type = 3 ;
	EdsClusterConfig eds_cluster_config = 4;
	string lb_str = 5;
	int32 lb = 6 ;
	repeated HealthCheck health_checks = 7;
	Endpoint endpoints = 8;
}


// Endpoint
message Endpoint {
	string id = 1;
	string name = 2;
	pixiu.api.v1.SocketAddress address = 3;
	map<string, string> metadata = 4;
}

message HttpHealthCheck {
	string host = 1;
	string path = 2;
	bool useHttp2 = 3;
	int64 expectedStatuses = 4;
}

message GrpcHealthCheck {
	string serviceName = 1;
		string authority = 2;
}

message CustomHealthCheck {
	string name = 1;
	google.protobuf.Struct config = 2;
}
// HealthCheck
message HealthCheck {
	oneof checker {
			HttpHealthCheck httpChecker = 1;
			GrpcHealthCheck grpcChecker = 2;
			CustomHealthCheck customChecker = 3;
	}
}